--- a/arquivos/home.html
+++ b/arquivos/home.html
@@ -29,7 +29,12 @@
         <section class="sinopse">
             <div class="sinopse-content">
                 <h2>Sinopse:</h2>
-                <p>Um jovem rapaz chamado Fernando tem uma vida extremamente difícil, lutando dia após dia...</p>
+                <p>Um jovem rapaz chamado Fernando tem uma vida extremamente dificil, lutando dia após dia<br> 
+                    para manter seus estudos para poder ter uma boa profissão e poder ajudar sua família, após<br> 
+                    ser tramado por seus colegas de faculdade ele perde tudo que demorou tanto para conquistar,<br> 
+                    ou pelo menos é o que ele pensava. Ele recebe uma grande chance de mudar seu destino ao<br> 
+                    ser apresentado a um mundo completamente diferente de tudo que ele já viu!<br> 
+                    </p>
                 <button>Primeiro capítulo</button>
                 <button>Último capítulo</button>
             </div>
