--- a/arquivos/home.html
+++ b/arquivos/home.html
@@ -1,69 +1,82 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Knight of Chaos</title>
-    <link rel="stylesheet" href="./css/styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Knight of Chaos</title>
+  <link rel="stylesheet" href="./css/styles.css" />
+  <link rel="shortcut icon" href="./src/KnightOfChaosLogo-2.png" type="image/x-icon" />
 </head>
+
 <body>
-    <div class="container">
-        <header>
-            <div class="logo">Knight of Chaos</div>
-            <nav>
-                <ul>
-                    <li><a href="#">Wiki's</a></li>
-                    <li><a href="#">Projetos</a></li>
-                    <li><a href="#">Audiobook</a></li>
-                </ul>
-            </nav>
-        </header>
+  <div class="container">
+    <header>
+      <img src="./src" alt="Knight of Chaos" type="logo" />
+      <nav>
+        <ul>
+          <li><a href="./wikis.html">Wiki's</a></li>
+          <li><a href="./projetos.html">Projetos</a></li>
+          <li><a href="./audiobook.html">Audiobook</a></li>
+          <li><a href="./login.html"> Login</a></li>
+        </ul>
+      </nav>
+    </header>
 
-        <section class="hero">
-            <img src="página_koc.png" alt="Knight of Chaos" class="hero-image">
-            <div class="hero-text">
-                <h1>Qual será sua próxima aventura?</h1>
-            </div>
-        </section>
+    <section class="hero">
+      <img src="./src/KnightOfChaosLogo-2.png" alt="Knight of Chaos" class="hero-image" />
+      <div class="hero-text">
+        <h1>Qual será sua próxima aventura?</h1>
+      </div>
+    </section>
 
-        <section class="sinopse">
-            <div class="sinopse-content">
-                <h2>Sinopse:</h2>
-                <p>Um jovem rapaz chamado Fernando tem uma vida extremamente dificil, lutando dia após dia<br> 
-                    para manter seus estudos para poder ter uma boa profissão e poder ajudar sua família, após<br> 
-                    ser tramado por seus colegas de faculdade ele perde tudo que demorou tanto para conquistar,<br> 
-                    ou pelo menos é o que ele pensava. Ele recebe uma grande chance de mudar seu destino ao<br> 
-                    ser apresentado a um mundo completamente diferente de tudo que ele já viu!<br> 
-                    </p>
-                <button>Primeiro capítulo</button>
-                <button>Último capítulo</button>
-            </div>
-        </section>
+    <section class="sinopse">
+      <div class="sinopse-content">
+        <h2>Sinopse:</h2>
+        <p>
+          Um jovem rapaz chamado Fernando tem uma vida extremamente dificil,
+          lutando dia após dia<br />
+          para manter seus estudos para poder ter uma boa profissão e poder
+          ajudar sua família, após<br />
+          ser tramado por seus colegas de faculdade ele perde tudo que demorou
+          tanto para conquistar,<br />
+          ou pelo menos é o que ele pensava. Ele recebe uma grande chance de
+          mudar seu destino ao<br />
+          ser apresentado a um mundo completamente diferente de tudo que ele
+          já viu!<br />
+        </p>
+        <button>Primeiro capítulo</button>
+        <button>Último capítulo</button>
+      </div>
+    </section>
 
-        <!-- Seção de capítulos alinhada à direita -->
-        <section class="capitulos">
-            <h2>CAPÍTULOS</h2>
-            <ul id="chapter-list">
-                <!-- Capítulos serão carregados dinamicamente aqui -->
-            </ul>
-        </section>
+    <!-- Seção de capítulos alinhada à direita -->
+    <section class="capitulos">
+      <h2>CAPÍTULOS</h2>
+      <ul id="chapter-list">
+        <!-- Capítulos serão carregados dinamicamente aqui -->
+      </ul>
+    </section>
 
-        <footer>
-            <p>O projeto é uma Webnovel chamada Knight of Chaos, que<br> 
-                nada mais é que uma história escrita e publicada por capítulos,<br> 
-                normalmente sendo apresentada semanalmente. A trama, a<br> 
-                criação dos personagens e cenários é de total imaginação do<br> 
-                autor.<br>
-                O projeto começou em 2018, após ler muitas Webnovels, senti<br> 
-                a necessidade de criar uma, algo que fosse feito do meu jeito<br> 
-                e com meu próprio estilo. A partir dai comecei a transcrever<br> 
-                a história que eu tinha em mente. Foram quatro anos dificeis,<br> 
-                onde por muitas vezes pensei em parar, mas graças aos leitores<br> 
-                e a várias pessoas que me ajudaram no caminho, consegui me<br> 
-                manter, com publicações semanais sem pausa.</p>
-        </footer>
-    </div>
+    <footer>
+      <p>
+        O projeto é uma Webnovel chamada Knight of Chaos, que<br />
+        nada mais é que uma história escrita e publicada por capítulos,<br />
+        normalmente sendo apresentada semanalmente. A trama, a<br />
+        criação dos personagens e cenários é de total imaginação do<br />
+        autor.<br />
+        O projeto começou em 2018, após ler muitas Webnovels, senti<br />
+        a necessidade de criar uma, algo que fosse feito do meu jeito<br />
+        e com meu próprio estilo. A partir dai comecei a transcrever<br />
+        a história que eu tinha em mente. Foram quatro anos dificeis,<br />
+        onde por muitas vezes pensei em parar, mas graças aos leitores<br />
+        e a várias pessoas que me ajudaram no caminho, consegui me<br />
+        manter, com publicações semanais sem pausa.
+      </p>
+    </footer>
+  </div>
 
-    <script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
+
 </html>
